# httpserver

./: CMakeLists.txt  README.md
cpp/: CMakeLists.txt  LICENSE  README.md
cpp/src/: client.cpp  dbclient.cpp  dbclient.h  mycomps.sql  server.cpp  server.h  testdbclient.cpp
csharp/: README.md  Readme.md
src/: client.cpp  server.cpp
